Readd search button div

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -23,6 +23,9 @@
                   <% end %>
               </div>
           <% end %>
+            <div class="input-group advance-search-space">
+        <button id="searchBtn" type="button" class="btn btn-primary btn-lg advance-search">Advance Search</button>
+        </div>
         </ul>
     <% end %>
       <div id="advanceSearch" class="modal">
