--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -90,7 +90,7 @@
 }
 
 .advance-search-space {
-  margin-left: 20%;
+  margin-left: inherit;
 }
 
 .advance-search-height{
@@ -105,6 +105,12 @@
 
 .nav-align {
   margin-top: -8px;
+  margin-left: 40px;
+}
+
+.nav-collapse-align{
+  padding-left: unset;
+  padding-right: unset;
 }
 
 .nav-bar{
