Fixed map-view header

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -120,7 +120,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h1>Item Location</h1>
-            <span class="close2">&times;</span>
+            <span class="close2 close-align">&times;</span>
             <h2></h2>
           </div>
           <div class="modal-body">
