--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -73,28 +73,28 @@
 
           <script>
               // Get the modal
-              var modal = document.getElementById('advanceSearch');
+              var searchBar = document.getElementById('advanceSearch');
 
               // Get the button that opens the modal
               var search = document.getElementById("searchBtn");
 
               // Get the <span> element that closes the modal
-              var span = document.getElementsByClassName("ui-icon-circle-close")[0];
+              var searchSpan = document.getElementsByClassName("ui-icon-circle-close")[0];
 
               // When the user clicks the button, open the modal
               search.onclick = function() {
-                  modal.style.display = "block";
+                  searchBar.style.display = "block";
               };
 
               // When the user clicks on <span> (x), close the modal
-              span.onclick = function() {
-                  modal.style.display = "none";
+              searchSpan.onclick = function() {
+                  searchBar.style.display = "none";
               };
 
               // When the user clicks anywhere outside of the modal, close it
               window.onclick = function(event) {
-                  if (event.target == modal) {
-                      modal.style.display = "none";
+                  if (event.target == searchBar) {
+                      searchBar.style.display = "none";
                   }
               }
           </script>
