--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -24,7 +24,7 @@
               </div>
           <% end %>
             <div class="input-group advance-search-space">
-        <button id="searchBtn" type="button" class="btn btn-primary btn-lg advance-search">Advance Search</button>
+        <button id="searchBtn" type="button" class="btn btn-primary btn-lg advance-search">Advanced Search</button>
         </div>
         </ul>
     <% end %>
