--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -10,6 +10,7 @@
   </thead>
 
   <tbody>
+  <% if @pictures.present? %>
     <% @pictures.each do |picture| %>
       <tr>
         <td><%= link_to 'Show', picture %></td>
@@ -17,6 +18,7 @@
         <td><%= link_to 'Destroy', picture, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
+      <% end %>
   </tbody>
 </table>
 
