test text update: UNO-Classifieds

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="navbar-brand nav-bar">
       <%= link_to image_tag('uno_logo.png', size: '40x40', class: 'd-inline-block align-top'), root_path, :class => 'a-blank' %>
-      &nbsp;<%= link_to 'UNO CLASSIFIEDS', root_path, class: 'brand-text' %>
+      &nbsp;<%= link_to 'UNO-CLASSIFIEDS', root_path, class: 'brand-text' %>
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
