Change delete picture message

--- a/app/views/listings/_pic.html.erb
+++ b/app/views/listings/_pic.html.erb
@@ -4,7 +4,7 @@
     <div class="caption">
       <p style="text-align: center;">
         <%= link_to 'Delete picture', { controller: :pictures, action: :destroy, id: pic.id},
-                      method: :delete, data: { confirm: 'Ok??' }, class: 'btn btn-primary'%>
+                      method: :delete, data: { confirm: 'Delete picture?' }, class: 'btn btn-primary'%>
       </p>
     </div>
   </div>
